--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -8,7 +8,7 @@
   <meta property="og:title" content="OMIF - Olimpíada de Matemática das Instituições Federais" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://omif.com.br" />
-  <meta property="og:image" content="src/assets/img/omif.svg" />
+  <meta property="og:image" content="https://omif.com.br/img/omif.svg" />
   <meta property="og:image:alt" content="..." />
   <!-- <base href="https://omif.com.br" /> -->
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
