--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="OMIF - Olimpíada de Matemática das Instituições Federais" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://omif.com.br" />
-  <meta property="og:image" content="https://omif.com.br/favicon.svg" />
+  <meta property="og:image" content="https://omif.com.br/favicon.jpg" />
   <meta property="og:image:alt" content="..." />
   <!-- <base href="https://omif.com.br" /> -->
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
