--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta content="width=device-width,initial-scale=1" name="viewport">
-  <meta name="theme-color" content="#0F701F">
+  <meta name="theme-color" content="#096218">
   <meta property="og:title" content="OMIF - Olimpíada de Matemática das Instituições Federais" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://omif.com.br" />
-  <meta property="og:image" content="https://omif.com.br/favicon.jpg" />
+  <meta property="og:image" content="https://omif.com.br/favicon.png" />
   <meta property="og:image:alt" content="..." />
   <!-- <base href="https://omif.com.br" /> -->
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -19,7 +19,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.gstatic.com" rel="preconnect">
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@700;800&display=swap" rel="stylesheet">
-  <link rel="icon" href="<%= BASE_URL %>favicon.svg">
+  <link rel="icon" href="favicon.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
